fix(dropdown-v3): updated dropdown z-index

--- a/tegel/src/components/dropdown-v3/dropdown-v3.scss
+++ b/tegel/src/components/dropdown-v3/dropdown-v3.scss
@@ -1,7 +1,9 @@
 @import '../../mixins/scrollbar';
+@import '../../mixins/z-index';
 
 .sdds-dropdown-webcomponent {
   position: relative;
+  z-index: z(dropdown);
 
   .dropdown-button {
     background-color: var(--sdds-dropdown-bg);
@@ -228,6 +230,7 @@
     position: relative;
 
     [role='listbox'] {
+      z-index: z(dropdown);
       position: absolute;
       top: 100%;
       left: 0;
